@startuml class_diagram
class User {
    int id
    String username
    String passwordHash
    String telephone
    String email
    bool isAdmin 
    Collection<GrantedAuthority> getAuthorities()
}
class Player {
    int id
    String name
    String position
    Date birthDate
    int goalsScored
}

class Team {
    int id
    String name
    String imagePath
    int nWinds
    int nLosses
    int nDraws
}
class Event {
    int id
    enum EventType type
    Date timestamp
} 
class Game {
    int id
    String location
    Date date
    int goalsA
    int goalsB
    bool isOngoing
    bool isInterrupted
}

User "events" *-- "user" Event
Game "events" --* "game" Event
Player "events" --* "player" Event
Team "players" --* "team" Player
Team "games" --* "team(A,B)" Game


@enduml
